name:                my-taffybar
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable my-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , taffybar
  default-language:    Haskell2010

executable my-xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010
